# science-containers

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLEANUP_PLAN.md  DOCUMENTATION_RESTRUCTURE_PROPOSAL.md  FILE_CLEANUP_REPORT.md  PHASE_2_ADDITIONAL_LINK_FIXES_REPORT.md  PHASE_2_LINK_VALIDATION_REPORT.md  PHASE_3A_TERMINOLOGY_FIXES_REPORT.md  PHASE_3_CONTENT_QUALITY_PLAN.md  RESTRUCTURING_COMPLETE.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: base.yml  carta-beta.yml  carta-stable.yml  carta.yml  cd.yml  ci.yml  docs.yml  firefly.yml  lsst-sciplat-deploy.yml
complete/: index.html
complete/faq/: index.html
complete/headless/: index.html
complete/permissions/: index.html
complete/publishing/: index.html
complete/science-containers/: index.html
complete/science-platform/: index.html
complete/science-portal/: index.html
docs/: CONTRIBUTING_DOCS.md  container-building-guide.md  data-transfer-guide.md  headless-execution-guide.md  index.md  storage-systems-guide.md
docs/advanced/: api.md  batch.md  containers.md
docs/complete/: available-containers.md  container-publishing-guide.md  headless.md  index.md  publishing.md
docs/developer-guide/: api.md  batch.md  containers.md  permissions.md
docs/faq/: index.md
docs/get-started/: index.md
docs/getting-started/: access.md  choose-interface.md  first-login.md  storage.md
faq/: index.html
general/: index.html
get-started/: index.html
help/: index.html
search/: search_index.json
user-guide/: index.html
(+174 files in other folders)
