[tool.poetry]
name = "science-containers"
version = "0.7.0"
description = "Science Containers for CANFAR"
authors = ["CANFAR <support@canfar.net>"]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.4"
mkdocstrings-python = "^1.7"
mkdocs-git-revision-date-localized-plugin = "^1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
